--- a/PressurePads.csproj
+++ b/PressurePads.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>SPTClientModExamples</RootNamespace>
+    <RootNamespace>PressurePads</RootNamespace>
     <Nullable>disable</Nullable>
     <Authors>SPT</Authors>
     <Copyright></Copyright>
