--- a/PressurePads.csproj
+++ b/PressurePads.csproj
@@ -32,6 +32,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="config\config.jsonc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="config\config.jsonc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="PhysicsModule">
@@ -98,7 +106,13 @@
     </Reference>
   </ItemGroup>
 
+	<PropertyGroup>
+		<BepInExPluginDir>E:\SPT_Dev\BepInEx\plugins\PressurePads</BepInExPluginDir>
+	</PropertyGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)\..\..\BepInEx\plugins\$(TargetFileName)&quot;" />
+	  <MakeDir Directories="$(BepInExPluginDir)" />
+	  <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(BepInExPluginDir)" SkipUnchangedFiles="true" />
+	  <Copy SourceFiles="$(TargetDir)\config\config.jsonc" DestinationFolder="$(BepInExPluginDir)\config" SkipUnchangedFiles="true" />
   </Target>
 </Project>
