Hopefully fixed fika compatible (works for locally hosted fika raids at least)

--- a/PressurePads.csproj
+++ b/PressurePads.csproj
@@ -107,7 +107,7 @@
   </ItemGroup>
 
 	<PropertyGroup>
-		<BepInExPluginDir>E:\SPT_Dev\BepInEx\plugins\PressurePads</BepInExPluginDir>
+		<BepInExPluginDir>$(ProjectDir)..\..\BepInEx\plugins\PressurePads</BepInExPluginDir>
 	</PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
